# EFileApp

./: EFileApp.pro  EFileApp.pro.user.a309534  EFileApp.pro.user.ed73232  Jpeg.cpp  Jpeg.h  README.md  camerawindow.cpp  camerawindow.h  globalhelper.cpp  globalhelper.h  main.cpp  mainwindow.cpp  mainwindow.h  scanmanagerwindow.cpp  scanmanagerwindow.h  scanwindow.cpp  scanwindow.h  setwindow.cpp  setwindow.h  setwindow.ui  sources.qrc  testctrlwindow.cpp  testctrlwindow.h
CamScanSDK/: camscansdk.h
helper/: deviceinfohelper.cpp  deviceinfohelper.h  globalhelper.cpp  webhelper.cpp  webhelper.h
listview/: deviceitemdelegate.cpp  deviceitemdelegate.h  listviewitemdata.h  picitemdelegate.cpp
org.deepin.scaner/: Install.sh  read me.txt
org.deepin.scaner/CamCaptureSDK/: CamCaptureSDK.pro  CamCaptureSDK.pro.user.11e98b4  CamCaptureSDK.pro.user.47c0912  CamCaptureSDK.pro.user.886c19e  CamCaptureSDK.pro.user.8c7e1e0  CamCaptureSDK.pro.user.a309534  CamCaptureSDK.pro.user.bde043c  CamCaptureSDK.pro.user.ed73232  Jpeg.cpp  Jpeg.h  autocapturethread.cpp  camcapturesdk.cpp  camcapturesdk.h  camcapturesdk_global.h  ccampturedecode.cpp  ccampturedecode.h  ccampturerender.cpp  ccampturerender.h  ccapmpturev4l.cpp  cimagehelper.cpp  cpng.cpp  cpng.h  cstartdraw.cpp  cstartdraw.h  errortype.h  hpdfoperation.cpp
org.deepin.scaner/CamScanSDK/: CamScanSDK.pro  CamScanSDK.pro.user.11e98b4  CamScanSDK.pro.user.2e1f52d  CamScanSDK.pro.user.629b3c5  CamScanSDK.pro.user.886c19e  CamScanSDK.pro.user.a309534  CamScanSDK.pro.user.ed73232  camscansdk.cpp  camscansdk.h  camscansdk_global.h  csanesddk.cpp  errortypescanner.h  readme.txt
org.deepin.scaner/CmImage/: CMakeLists.txt  CmImage.pro  CmImage.pro.user.47c0912  CmImage.pro.user.80015bb  CmImage.pro.user.ed73232  cmimage.cpp  cmimage.h  stdafx.h
org.deepin.scaner/CmImage/ImgProc/: Adapter.cpp  AdaptiveThreshold.cpp  BrightnessBalance.cpp  BrightnessBalance.h  DetectRectByContours_new.cpp  DetectRectByContours_new.h  DetectRectByContours_new1.cpp  ImageDecoder.cpp  Rotate.cpp  Rotate.h  tools.cpp
org.deepin.scaner/CmImage/ImgProc/BookProcess/: Adapter2.cpp  BookProcess.cpp  BookProcess.h  MysherBook.cpp  Test_Book.cpp  Test_Book.h
org.deepin.scaner/CmImage/ImgProc/ColorSpace/: AdaptiveThreshold.cpp  AdaptiveThreshold.h
org.deepin.scaner/CmImage/ImgProc/Enhancement/: AutoLevel.cpp  AutoLevel.h  BrightnessBalance.cpp  BrightnessBalance.h  ColorEnhance.cpp  ColorEnhance.h  ColorSpace.cpp  ColorSpace.hpp  Compare.cpp  Compare.h  Curves.cpp  Curves.hpp  DeleteNoise_BW.cpp  DetectionWhitePage.cpp  DetectionWhitePage.h  DocumentBackgroundSeparation.cpp  DocumentBackgroundSeparation.h  FilterEffect.cpp  FilterEffect.h  HSL.cpp  HSL.hpp  Halftone.cpp  Histogram.cpp  Histogram.h  ImageDecoder.cpp  ImageDecoder.h  ImageEnhancement.cpp  ImageEnhancement.h  ImgAdjust.cpp  ImgAdjust.h  Noise.cpp  Noise.h  RemoveNoise.cpp  RemoveNoise.h  SharpImage.cpp  SharpImage.h  WaterMark.cpp  newColorEnhance.cpp
org.deepin.scaner/CmImage/ImgProc/Feature/: AdjustSkew.cpp  AdjustSkew.h  DetectEdge.cpp  DetectEdge.h  DetectRectByContours.cpp  DetectRectByContours.h  DetectRectByContours_new.cpp  DetectRectBySegmation.cpp  DetectRectBySegmation.h  FillBorder.cpp  PunchHold.cpp  PunchHold.h
org.deepin.scaner/CmImage/ImgProc/Libjpeg/: Jpeg.cpp  Jpeg.h
org.deepin.scaner/CmImage/ImgProc/Transform/: CropRectByCV.cpp  MergerImage.cpp  MergerImage.h  Rotate.cpp  Rotate.h
org.deepin.scaner/CmImage/ImgProc/WaterMark/: CvText.cpp  CvText.h  tools.h
org.deepin.scaner/CmImage/Model/MImageModel/: Adapter.cpp  Jpeg.cpp  MImageDataPool.cpp  MImageDataPool.h
org.deepin.scaner/CmImage/Util/: pathutil.cpp  pathutil.h  substringutil.cpp  substringutil.h  timeutil.cpp  timeutil.h
org.deepin.scaner/EFileApp/: EFileApp.pro  EFileApp.pro.QmLSOE  EFileApp.pro.user.11e98b4  EFileApp.pro.user.133068b  EFileApp.pro.user.629b3c5  EFileApp.pro.user.ccea02b  EFileApp.sh  Jpeg.cpp  Jpeg.h  cpng.cpp  (+32 more)
sanehelper/: sanehelper.h
thread/: doscanthread.cpp  doscanthread.h  getcamerainfothread.cpp  getcamerainfothread.h  getscannerinfothread.cpp  getscannerinfothread.h
(+250 files in other folders)
